# homelab-backup

./: .gitignore  ADDING_PLUGINS.md  AGENTS.md  ARCHITECTURE.md  BACKEND_PLAN.md  CONTRIBUTING.md  FRONTEND_PLAN.md  GROUPS_AND_TAGS_SPECIFICATION.md  LICENSE  MAINTENANCE_JOBS_IMPLEMENTATION.md  PLUGIN_SPEC.md  PRD.md  README.md  TEST_PLAN.md  TODO_NEXT_STEPS_RESTORE.md  backend_tdd_test_plan_groups_tags.md  cursor.rules.backend.yml  cursor.rules.frontend.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  backups.py  groups.py  health.py  jobs.py  maintenance.py  metrics.py  plugins.py  restores.py  runs.py  settings.py  tags.py  targets.py
backend/app/core/: db.py  logging.py  notifier.py  scheduler.py
backend/app/domain/: enums.py
backend/app/models/: __init__.py  common.py  groups.py  jobs.py  maintenance.py  runs.py  settings.py  tags.py  targets.py
backend/app/plugins/: __init__.py
backend/app/schemas/: __init__.py  backups.py  groups.py  jobs.py  maintenance.py  runs.py  settings.py  tags.py  targets.py
backend/app/services/: __init__.py  backups_from_disk.py  groups.py  jobs.py  maintenance.py  restores.py  retention.py  runs.py  tags.py  targets.py
backend/migrations/: 001_add_operation_columns.sql  002_make_job_id_nullable.sql  003_add_settings_and_retention.sql  004_add_maintenance_jobs.sql  004_ensure_retention_policy_json.sql
backend/scripts/: migrate_db.sh
backend/tests/: conftest.py  test_api.py  test_backups_from_disk_service.py  test_lidarr_plugin.py  test_models.py  test_plugin_jellyfin.py  test_scheduler.py  test_schemas.py  test_sidecar.py  test_wordpress_plugin.py
backend/tests/plugins/: test_calcom_plugin.py  test_invoiceninja_plugin.py  test_lidarr_plugin.py  test_mysql_plugin.py  test_postgresql_plugin.py  test_radarr_plugin.py  test_sonarr_plugin.py  test_vaultwarden_plugin.py  test_wordpress_plugin.py
backend/tests/test_api/: conftest.py  test_backups_api.py  test_groups_api.py  test_jobs_api.py  test_metrics_api.py  (+7 more)
(+131 files in other folders)
